2003-12-19  Murray Cumming  <murrayc@usa.net>

	* configure.in: Added glibmm-2.4 to the pkg-config check.
	* Used regexxer to do a complete std::string/Glib::ustring rename.
	Everything seems to still work. I think the parse_chunk(stream)
	stuff might need some attention/thought.

2003-12-19  Murray Cumming  <murrayc@usa.net>

	* removed acinclude.m4 because we do not need it anymore because
	we do not need AM_LIBXML now that we use pkg-config.
	* libxml++/Makefile.am: Generate a library with 2.5 in the name, 
	instead of 1.0
	* configure.in: Change version to 2.5.0.
	* examples/Makefile.am_fragment: Link to the new library name.
	* Renamed libxml++-1.0.pc.in to libxml++-2.6.pc.in: and changed the 
	library name that pkg-config reports for --libs.
	* So, this is now the libxml++ 2.6 API, with a library name of 2.5 
	while it is unstable. It is parallel-installable with libxml++ 1.0.

This is the HEAD branch, for libxml++ 2.5/2.6.

1.0.0:

2003-12-18  Ephraim Vider <eff@eplication.com>
	* examples/sax_parser_build_dom/svgelement.cc,svgpath.h:
	- removed unneeded method qualification (msvc6 error)
	* examples/sax_parser_entities/myparser.cc:
	- removed namespace qualification (msvc6 error)
	- removed return from void function

2003-12-18  Ephraim Vider <eff@eplication.com>

	* win32_msvc6: updated MSVC projects to include new sources and examples

2003-12-12  Christophe de Vienne  <cdevienne@alphacent.com>

	* libxml++/parsers/sax_parser.cc: removed initialisation of userData
	with this at the context creation (solution given by Murray).

2003-12-11  Murray Cumming  <murrayc@usa.net>

	* libxml++/Makefile.am: Generate a library with 1.0 in the name, 
	instead of 0.1
	* configure.in: Change version to 1.0.0, and change shared library
	version to 1.0.0 because we are staring again witt the first
	version of a new shared library.
	* examples/Makefile.am_fragment: Link to the new library name.
	* libxml++-1.0.pc.in: Change the library name that pkg-config